--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 target
 .idea/workspace.xml
 .idea/dataSources
+.idea/sqldialects.xml
 .idea/dataSources.local.xml
 .idea/dataSources.xml
 .idea/kotlinc.xml
